# autograd

./: .gitignore  Cargo.toml  Makefile  README.md  autograd_core.pyi  pyproject.toml  pyrightconfig.json
autograd/: __init__.py  autograd_core.pyi  device.py  dtypes.py  helpers.py  tensor.py
autograd/datasets/: __init__.py
autograd/engine/: __init__.py  buffer.py  realize.py
autograd/engine/allocator/: __init__.py  allocator.py
autograd/examples/: mnist.py  mnist_np.py
autograd/mixin/: elementwise.py  movement.py
autograd/ops/: __init__.py  ops.py  rules.py  uop.py
autograd/scheduler/: __init__.py  scheduler.py
autograd/tests/: __init__.py  tensor.py
autograd/tests/ops/: broadcast.py  expand.py
autograd_core/: README.md  __init__.py  __init__.pyi
csrc/: buffer.c  dtype.c  dtype.h  storage.c  storage.h
csrc/engine/: allocator.c  buffer.c  buffer.h
examples/: mnist.rs  test.rs
src/: README.md  buffer.rs  dtype.rs  helpers.rs  lib.rs  storage.rs  tensor.rs  view.rs
src/nn/: datasets.rs
src/ops/: mod.rs  ops.rs  select.rs
src/types/: mod.rs  tensor_array.rs
tests/: test.rs
tests/types/: mod.rs
